DuPont DevSB/src/objects/CS_Account_Load_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for storing all the used values in Accounts Batch processes.</description>
    <fields>
        <fullName>AccountGroup__c</fullName>
        <label>AccountGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwnerUserName__c</fullName>
        <description>This field will hold the username.</description>
        <inlineHelpText>This field will hold the username of static user &quot;Customer Service&quot; created in application.</inlineHelpText>
        <label>Account Owner User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <label>Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <label>RecordType Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_General__c</fullName>
        <description>To capture the general Data Record type name</description>
        <label>Record Type Name - General</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendErrorNotificationTo__c</fullName>
        <label>Send Error Notification To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZR_partner_code__c</fullName>
        <description>Created to store ZR partner code</description>
        <label>ZR partner code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CS_AccountLoadSettings</label>
</CustomObject>